--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,11 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>My Gallery</title>
+  <link rel="stylesheet" href="/reset.css">
+  <link rel="stylesheet" href="/base.css">
 </head>
 
 <body>
-  <p>Hello World!</p>
+  <main>
+    <h4>Saved Works (<%= count %>)</h4>
+    <ul>
+      <% result.forEach(art => { %>
+      <li class="art-items" data-work-id="<%= art.id %>">
+        <section class="art-container detail-view">
+          <img src="<%= art.image_url %>" alt="image of artwork">
+          <h3><%= art.title %></h3>
+          <span><%= art.artist %></span>
+          <p>
+            <% if (art.gallery) { %>
+            Gallery:
+            <%= art.gallery %>
+            <% } %>
+          </p>
+          <p class="detail-button"><a href="/works/<%= art.id %>">View Details</a></p>
+        </section>
+      </li>
+      <% }) %>
+    </ul>
+  </main>
 </body>
 
 </html>
