--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <a name="top"></a>
   <main>
     <h4>Saved Works (<%= count %>)</h4>
     <ul>
@@ -31,6 +32,7 @@
       <% }) %>
     </ul>
   </main>
+  <%- include('../layouts/footer.ejs') %>
 </body>
 
 </html>
