--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <a name="top"></a>
+    <%- include('../layouts/header.ejs') %>
   <main>
     <h4>Saved Works (<%= count %>)</h4>
     <ul>
