--- a/public/base.css
+++ b/public/base.css
@@ -1,5 +1,6 @@
 body {
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 img {
@@ -19,4 +20,15 @@ a {
 
 a:hover {
   font-weight: bolder;
+}
+
+header {
+  background: black;
+  padding: 30px;
+}
+
+h1 {
+  /* color: rgb(255, 217, 0); */
+  font-size: 3em;
+  font-weight: bold;
 }
