added partials to various views

--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -2,15 +2,17 @@
 <html lang="en">
 
 <head>
-  <!-- <%- include('../layout/head') %> -->
+    <%- include('../layouts/head') %>
+    <title>Error</title>
 </head>
 
 <body>
-  <!-- <%- include('../layout/header') %> -->
+    <%- include('../layouts/header') %>
   <main>
-    <p><%= error %></p>
+    <p>Error: <%= error %></p>
+    <img src="assets/scream.jpg" alt="">
   </main>
-  <!-- <%- include('../layout/footer') %> -->
+  <%- include('../layouts/footer') %>
 </body>
 
 </html>
