--- a/views/searches/new.ejs
+++ b/views/searches/new.ejs
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <%- include('../layouts/head') %>
   <title>Search</title>
 </head>
 <body>
+  <%- include('../layouts/header') %>
   <main>
     <h2>Search by Artist, Title, or Color</h2>
     <form action="/searches/results" method="POST">
@@ -17,5 +16,6 @@
       <button type="submit">Search for a Work</button>
     </form>
   </main>
+  <%- include('../layouts/footer') %>
 </body>
 </html>
