--- a/views/works/detail.ejs
+++ b/views/works/detail.ejs
@@ -1,20 +1,22 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <%- include('../layouts/head') %>
+  <title>Details</title>
 </head>
 
 <body>
-  <section>
-    <img src="<%= work.image_url %>">
-    <p>Title: <%= work.title %></p>
-    <p>Artist: <%= work.artist %></p>
-    <p>Century: <%= work.century %></p>
-    <p>Gallery: <%= work.gallery %></p>
-  </section>
+  <%- include('../layouts/header') %>
+  <main>
+    <section>
+      <img src="<%= work.image_url %>">
+      <p>Title: <%= work.title %></p>
+      <p>Artist: <%= work.artist %></p>
+      <p>Century: <%= work.century %></p>
+      <p>Gallery: <%= work.gallery %></p>
+    </section>
+  </main>
+  <%- include('../layouts/footer') %>
 </body>
 
 </html>
