--- a/views/searches/show.ejs
+++ b/views/searches/show.ejs
@@ -1,12 +1,13 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <%- include('../layouts/head') %>
+  <%- include ../layouts/head %>
   <title>Search Results</title>
 </head>
 
 <body>
-  <%- include('../layouts/header') %>
+  <%- include ../layouts/header %>
   <main>
     <section>
       <ul>
@@ -22,7 +23,7 @@
       </ul>
     </section>
   </main>
-  <%- include('../layouts/footer') %>
+  <%- include ../layouts/footer %>
 </body>
 
 </html>
