--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -13,7 +13,11 @@ footer {
   padding: 30px;
 }
 
-footer a {
+#details-a {
+  color: black;
+}
+
+a {
   text-decoration: none;
   color: white;
 }
