--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -10,6 +10,7 @@
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/searches">Search</a></li>
+      <li><a href="/about">About</a></li>
     </ul>
   </nav>
 </header>
