--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,16 +1,40 @@
 <header>
   <a name="top"></a>
-  <div>
-    <a href="/">
-      <h1>Pocket Gallery</h1>
-    </a>
-  </div>
-  <nav>
+  <!-- <nav>
     <div class="icon-menu"></div>
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/searches">Search</a></li>
       <li><a href="/about">About</a></li>
     </ul>
+  </nav> -->
+
+
+
+  <!--    Credit to Erik Terwan for hamburger menu animation: https://codepen.io/erikterwan/pen/EVzeRP  -->
+  <nav role="navigation">
+    <div id="menuToggle">
+      <input type="checkbox" />
+      <span></span>
+      <span></span>
+      <span></span>
+      <ul id="menu">
+        <a href="/">
+          <li>Home</li>
+        </a>
+        <a href="/searches">
+          <li>Search</li>
+        </a>
+        <a href="/about">
+          <li>About</li>
+        </a>
+      </ul>
+    </div>
   </nav>
+  <div>
+    <a href="/">
+      <h1>Pocket Gallery</h1>
+    </a>
+  </div>
+
 </header>
