--- a/public/styles/icons.css
+++ b/public/styles/icons.css
@@ -1,89 +1,121 @@
-header div {
-  max-width: 80%;
-  padding: 2vw;
+a:hover {
+  color: #847577;
 }
 
-nav {
-  float: right;
-  width: 100%;
-}
-
-nav ul {
-  display: none;
-  width: 100%;
-  box-sizing: border-box;
-}
-
-nav li {
-  margin: 1.5vw 0;
-  padding: 2vw 0;
-  cursor: pointer;
-}
-
-nav li a {
-  font-size: 3.5vw;
-}
-
-nav:hover ul {
-  background-color: #000;
-  opacity: .5;
+#menuToggle {
   display: block;
-  padding: 1.5vw;
+  position: relative;
+  top: 25px;
+  left: 25px;
+  z-index: 1;
+
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle input {
+  display: block;
+  width: 40px;
+  height: 32px;
   position: absolute;
-  right: 0;
-}
+  top: -7px;
+  left: -5px;
 
-nav li:hover {
   cursor: pointer;
+
+  opacity: 0;
+  /* hide this */
+  z-index: 2;
+  /* and place it over the hamburger */
+
+  -webkit-touch-callout: none;
 }
 
-.icon-menu {
-  color: #d1ab90;
-  font-size: 8vw;
-  line-height: 10vw;
+/*
+  * Just a quick hamburger
+  */
+#menuToggle span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+
+  background: #cdcdcd;
+  border-radius: 3px;
+
+  z-index: 1;
+
+  transform-origin: 4px 0px;
+
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+    opacity 0.55s ease;
+}
+
+#menuToggle span:first-child {
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+
+/* 
+  * Transform all the slices of hamburger
+  * into a crossmark.
+  */
+#menuToggle input:checked~span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+/*
+  * But let's hide the middle one.
+  */
+#menuToggle input:checked~span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+  * Ohyeah and the last one should go the other direction
+  */
+#menuToggle input:checked~span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+  * Make this absolute positioned
+  * at the top left of the screen
+  */
+#menu {
   position: absolute;
-  right: 0;
-  top: 0;
-  cursor: pointer;
-}
+  width: 105%;
+  margin: -100px 0 0 -100px;
+  padding: 50px;
+  padding-bottom: 25px;
 
-@font-face {
-  font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?4wldlb');
-  src:  url('fonts/icomoon.eot?4wldlb#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?4wldlb') format('truetype'),
-    url('fonts/icomoon.woff?4wldlb') format('woff'),
-    url('fonts/icomoon.svg?4wldlb#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-[class^="icon-"], [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-
-  /* Better Font Rendering =========== */
+  background: #ededed;
+  list-style-type: none;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* to stop flickering of text in safari */
+
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
 }
 
-.icon-pencil:before {
-  content: "\e905";
-}
-.icon-menu:before {
-  content: "\e9bd";
-}
-.icon-heart:before {
-  content: "\e9da";
-}
-.icon-cross:before {
-  content: "\ea0f";
+#menu li {
+  padding: 10px 0;
+  font-size: 22px;
 }
 
-
+/*
+  * And let's slide it in from the left
+  */
+#menuToggle input:checked~ul {
+  transform: none;
+}
