--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -7,10 +7,11 @@
 </head>
 
 <body>
-    <%- include('../layouts/header') %>
+  <%- include('../layouts/header') %>
   <main>
-    <p>Error: <%= error %></p>
-    <img src="assets/scream.jpg" alt="">
+    <p id="error-p"><%= error %></p>
+    <p>Nothing to see here. Select the menu above to find your way back to the <a id="error-a" href="/">gallery</a>.</p>
+    <img id="scream" src="/assets/scream.jpg" alt="">
   </main>
   <%- include('../layouts/footer') %>
 </body>
