--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'MyWebFont';
+  src: url('fonts/FontsFree-Net-Isabel-Condensed-2.tff')  format('truetype');
+}
+
 body {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
@@ -7,6 +12,7 @@ h1 {
   color: #e5e6e4;
   font-size: 3em;
   font-weight: bold;
+  font-family: MyWebFont;
 }
 
 a {
