testing frame styling

--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -22,7 +22,8 @@
   </nav>
   <div>
     <a href="/">
-      <h1>Pocket Gallery</h1>
+      <h1 id="pocket">POCKET</h1>
+      <h1 id="gallery">gallery</h1>
     </a>
   </div>
 
