--- a/public/styles/icons.css
+++ b/public/styles/icons.css
@@ -1,14 +1,17 @@
 /* START HAMBURGER MENU */
 
+nav a {
+  color: black;
+}
+
 a:hover {
-  color: #847577;
+  color: white;
 }
 
 #menuToggle {
   display: block;
   position: relative;
   top: 25px;
-  left: 25px;
   z-index: 1;
   -webkit-user-select: none;
   user-select: none;
@@ -67,11 +70,11 @@ a:hover {
 
 #menu {
   position: absolute;
-  width: 105%;
+  width: 115%;
   margin: -100px 0 0 -100px;
   padding: 50px;
   padding-bottom: 25px;
-  background: #fbfbf2;
+  background: #d1ab90;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   transform-origin: 0% 0%;
@@ -81,7 +84,7 @@ a:hover {
 
 #menu li {
   padding: 10px 0;
-  font-size: 22px;
+  font-size: 1.2em;
 }
 
 #menuToggle input:checked~ul {
