--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -3,3 +3,6 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="/styles/styles.css">
 <link rel="shortcut icon" href="/assets/painting.png" type="image/x-icon">
+<link href="https://fonts.googleapis.com/css?family=Sofia&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Comfortaa:400,600,700&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/cb54e00580.js" crossorigin="anonymous"></script>
