--- a/views/works/detail.ejs
+++ b/views/works/detail.ejs
@@ -9,7 +9,8 @@
 <body>
  <%- include('../layouts/header') %>
  <main>
-  <section>
+  <h4>Details</h4>  
+  <section  >
     <img src="<%= work.image_url %>">
     <p>Title: <%= work.title %></p>
     <p>Artist: <%= work.artist %></p>
