Image URLs save to DB

--- a/views/searches/show.ejs
+++ b/views/searches/show.ejs
@@ -19,6 +19,10 @@
           <p>Century: <%= work.century %></p>
 
           <form action="/works" method="POST">
+            <input type="hidden" name="title" id="title" value="<%= work.title %>">
+            <input type="hidden" name="artist" id="artist" value="<%= work.artist %>">
+            <input type="hidden" name="century" id="century" value="<%= work.century %>">
+            <input type="hidden" name="image_url" id="image_url" value="<%= work.image_url %>">
             <select name="gallery" id="gallery">
               <% galleries.forEach(gallery => { %>
               <option value="<%= gallery.gallery %>"><%= gallery.gallery %></option>
