added placeholder for broken images

--- a/views/searches/show.ejs
+++ b/views/searches/show.ejs
@@ -13,7 +13,7 @@
       <ul>
         <% works.forEach(work => { %>
         <li>
-          <img src="<%=work.image_url%>">
+          <img src="<%= work.image_url ? work.image_url : 'assets/placeholder.jpg'%>">
           <p>Title: <%= work.title %></p>
           <p>Artist: <%= work.artist %></p>
           <p>Century: <%= work.century %></p>
