--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -29,7 +29,7 @@
       <% result.forEach(art => { %>
       <li class="art-items" data-work-id="<%= art.id %>">
         <section id="work-section">
-          <img class="frame" src="<%= art.image_url %>" alt="image of painting">
+          <img class="frame" src="<%= art.image_url ? art.image_url : 'assets/placeholder.jpg' %>" alt="image of painting">
           <h3><%= art.title %></h3>
           <span><%= art.artist %></span>
           <p>
