removed class from buttons

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -33,7 +33,7 @@
           <h3><%= art.title %></h3>
           <p><%= art.artist %></p>
           <p>gallery > <%= art.gallery %></p>
-          <button class="button-detail" onclick="window.location.href = '/works/<%= art.id %>';">View Details</button>
+          <button onclick="window.location.href = '/works/<%= art.id %>';">View Details</button>
         </section>
       </li>
       <% }) %>
