--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -114,7 +114,7 @@ footer {
   line-height: 2em;
 }
 
-.button-detail, .search-button {
+button {
   margin-top: 10px;
   padding: 10px;
   background-color: #d1ab90;
@@ -124,7 +124,7 @@ footer {
   border-radius: 5px;
 }
 
-.button-detail:hover {
+button:hover {
   background-color: #847577;
   color: white;
 }
