--- a/views/searches/noResults.ejs
+++ b/views/searches/noResults.ejs
@@ -8,7 +8,7 @@
 
 <%- include('../layouts/header') %>
 <body>
-  <h2>There are 0 results for that search... Please try a different keyword</h2>
+  <h4>There are 0 results for that search. <br><br>Please try a different keyword.</h4>
   <section>
     <form action="/searches" method="GET">
       <button type="submit">Search Again</button>
