--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -9,6 +9,7 @@
 <body>
   <%- include('../layouts/header') %>
   <main>
+    <h4 >Oops!</h4>
     <p id="error-p"><%= error %></p>
     <p>Nothing to see here. Select the menu above to find your way back to the <a id="error-a" href="/">gallery</a>.</p>
     <img id="scream" src="/assets/scream.jpg" alt="">
