--- a/views/searches/new.ejs
+++ b/views/searches/new.ejs
@@ -13,7 +13,7 @@
       Search by Keyword: <input type="radio" name="search" value="keyword" checked> <br>
       Search by Artist: <input type="radio" name="search" value="artist"> <br>
       Search by Title: <input type="radio" name="search" value="title"> <br>
-      Serach by Main Color: <input type="radio" name="search" value="color"> <br>
+      Search by Main Color: <input type="radio" name="search" value="color"> <br>
       <button type="submit">Search for a Work</button>
     </form>
   </main>
