--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,13 +14,29 @@
           class="fas fa-search"></i></a></h4>
 
     <section class="subhead">
-      <h3>Create a new Gallery</h3>
+
       <form action="/gallery" method="POST">
+        <h3>Create a new Gallery</h3>
         <label for="gallery">New Gallery Name</label>
         <input type="hidden" name="_method" value="PUT">
         <input type="text" name="gallery" id="gallery">
-        <button type="submit">Submit</button>
+        <button type="submit">Create</button>
       </form>
+
+
+      <form action="/gallery" method="post">
+        <h3>Delete a Gallery</h3>
+        <input type="hidden" name="_method" value="delete">
+        <label for="gallery">Delete Gallery</label>
+        <select name="gallery" id="gallery">
+          <% galleries.forEach(gallery => { %>
+          <option value="<%= gallery.name %>"><%= gallery.name %></option>
+          <%})%>
+        </select>
+        <button type="submit">Delete</button>
+      </form>
+
+
       <h3>Select Gallery to View</h3>
       <form action="/gallery" method="POST">
 
@@ -39,7 +55,8 @@
       <% result.forEach(art => { %>
       <li class="art-items" data-work-id="<%= art.id %>">
         <section class="work-section">
-          <img class="frame" src="<%= art.image_url ? art.image_url : 'assets/placeholder.jpg' %>" alt="image of painting">
+          <img class="frame" src="<%= art.image_url ? art.image_url : 'assets/placeholder.jpg' %>"
+            alt="image of painting">
           <h3><%= art.title %></h3>
 
           <span><%= art.artist %></span>
