--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -1,5 +1,99 @@
-/* Start Drop Down Menus */
+/* START HAMBURGER MENU */
+/* Credit: https://codepen.io/erikterwan/pen/EVzeRP */
+nav a {
+  color: black;
+}
 
+a:hover {
+  color: white;
+}
+
+#menuToggle {
+  display: block;
+  position: relative;
+  top: 25px;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle input {
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 2;
+  -webkit-touch-callout: none;
+}
+
+#menuToggle span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  background: #e5e6e4;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+    opacity 0.55s ease;
+}
+
+#menuToggle span:first-child {
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+
+#menuToggle input:checked~span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+#menuToggle input:checked~span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#menuToggle input:checked~span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+#menu {
+  position: absolute;
+  width: 115%;
+  margin: -100px 0 0 -100px;
+  padding: 50px;
+  padding-bottom: 25px;
+  background: #d1ab90;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+}
+
+#menu li {
+  padding: 10px 0;
+  font-size: 1.2em;
+}
+
+#menuToggle input:checked~ul {
+  transform: none;
+}
+
+/* END HAMBURGER MENU */
+
+/* START DROP-DOWN MENUS */
 /* Credit: https://css-tricks.com/styling-a-select-like-its-2019/ */
 
 select {
@@ -39,4 +133,4 @@ select option {
   font-weight:normal;
 }
 
-/* End Drop Down Menus */
+/* END DROP-DOWN MENUS */
