--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,6 +1,6 @@
 <header>
   <a name="top"></a>
-  <!--    Credit to Erik Terwan for hamburger menu animation: https://codepen.io/erikterwan/pen/EVzeRP  -->
+  <!-- Hamburger Menu -->
   <nav role="navigation">
     <div id="menuToggle">
       <input type="checkbox" />
@@ -20,11 +20,29 @@
       </ul>
     </div>
   </nav>
+
   <div>
     <a href="/">
       <h1 id="pocket">POCKET</h1>
       <h1 id="gallery">gallery</h1>
     </a>
   </div>
+
+  <!-- Desktop Menu -->
+  <nav id="nav-desktop">
+    <ul>
+      <a href="/">
+        <li>Home</li>
+      </a>
+      <a href="/searches">
+        <li>Search</li>
+      </a>
+      <a href="/about">
+        <li>About</li>
+      </a>
+    </ul>
+  </nav>
+
+
 
 </header>
