--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: 'MyWebFont';
-  src: url('fonts/FontsFree-Net-Isabel-Condensed-2.tff')  format('truetype');
-}
-
 body {
   text-align: center;
   font-family: 'Comfortaa', cursive;
@@ -40,40 +35,8 @@ a:hover {
 }
 
 section {
-  margin: 5%;
+  margin: 40px;
 }
-
-/* START MATTED FRAME */
-/* Credit: https://codepen.io/chris22smith/pen/PbBwjp */
-
-img {
-  border:solid 2px;
-  border-bottom-color:#ffe;
-  border-left-color:#eed;
-  border-right-color:#eed;
-  border-top-color:#ccb;
-  max-height:100%;
-  max-width:100%;
-}
-
-.frame {
-  background-color:#cfd2cd;
-  border:solid 5vmin #eee;
-  border-bottom-color:#fff;
-  border-left-color:#eee;
-  border-radius:2px;
-  border-right-color:#eee;
-  border-top-color:#ddd;
-  box-shadow:0 0 5px 0 rgba(0,0,0,.25) inset, 0 5px 10px 5px rgba(0,0,0,.25);
-  box-sizing:border-box;
-  display:inline-block;
-  padding:8vmin;
-  position:relative;
-  text-align:center;
-  margin-bottom: 15px;
-}
-
-/* END MATTED FRAME */
 
 header {
   background: #847577;
