--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -1,3 +1,35 @@
+/* START MATTED FRAME */
+/* Credit: https://codepen.io/chris22smith/pen/PbBwjp */
+
+img {
+  border:solid 2px;
+  border-bottom-color:#ffe;
+  border-left-color:#eed;
+  border-right-color:#eed;
+  border-top-color:#ccb;
+  max-height:100%;
+  max-width:100%;
+}
+
+.frame {
+  background-color:#cfd2cd;
+  border:solid 25px #eee;
+  border-bottom-color:#fff;
+  border-left-color:#eee;
+  border-radius:2px;
+  border-right-color:#eee;
+  border-top-color:#ddd;
+  box-shadow:0 0 5px 0 rgba(0,0,0,.25) inset, 0 5px 10px 5px rgba(0,0,0,.25);
+  box-sizing:border-box;
+  display:inline-block;
+  padding: 40px;
+  position:relative;
+  text-align:center;
+  margin-bottom: 15px;
+}
+
+/* END MATTED FRAME */
+
 /* START HAMBURGER MENU */
 /* Credit: https://codepen.io/erikterwan/pen/EVzeRP */
 nav a {
