created about ejs from Lindsay's HTML and refactored mobile css

--- a/public/styles/layouts/tablet.css
+++ b/public/styles/layouts/tablet.css
@@ -31,3 +31,14 @@ li {
   padding: 2%;
   width: 45%;
 }
+
+#about-div {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  text-align: center;
+}
+
+.li-about {
+  width: 25%;
+}
