completed about page styling

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -11,50 +11,50 @@
   <main>
     <h4>Renaissance Devs</h4>
 
-    <ul>
-      <li class="art-items">
+    <ul class="ul-about">
+      <li class="li-about">
         <section class="work-section">
           <img class="frame" src="assets/david.jpg" alt="David Vloedman" />
           <p>David Vloedman</br>"Michaelango"</p>
-          <a href="https://github.com/david-vloedman"><img alt="GitHub" src=""></a>
-          <a href="https://www.linkedin.com/in/davidvloedman/"><img alt="LinkedIn" src=""></a>
+          <a href="https://github.com/david-vloedman"><img class="social-media" alt="GitHub"
+              src="assets/github.png"></a>
+          <a href="https://www.linkedin.com/in/davidvloedman/"><img class="social-media" alt="LinkedIn"
+              src="assets/linkedin.png"></a>
         </section>
       </li>
-    </ul>
-
-    <ul>
-      <li class="art-items">
+      <li class="li-about">
         <section class="work-section">
           <img class="frame" src="/assets/holly.jpg" alt="Holly Davis" />
           <p>Holly Davis</br>"Donatello"</p>
-          <a href="https://github.com/hollydavis541"><img alt="GitHub" src=""></a>
-          <a href="https://www.linkedin.com/in/hollydavis541/"><img alt="LinkedIn" src=""></a>
+          <a href="https://github.com/hollydavis541"><img class="social-media" alt="GitHub" src="assets/github.png"></a>
+          <a href="https://www.linkedin.com/in/hollydavis541/"><img class="social-media" alt="LinkedIn"
+              src="assets/linkedin.png"></a>
         </section>
       </li>
-    </ul>
 
-    <ul>
-      <li class="art-items">
-        <section class="work-section">
-          <img class="frame" src="/assets/travis.jpg" alt="Travis Skyles" />
-          <p>Travis Skyles<br />"Leonardo"</p>
-          <a href="https://github.com/tskyles"><img alt="GitHub" src="/images/github.png"></a>
-          <a href="https://www.linkedin.com/in/travisskyles/"><img alt="LinkedIn" src="/images/linkedin.png"></a>
-        </section>
-      </li>
-    </ul>
-
-    <ul>
-      <li class="art-items">
+      <li class="li-about">
         <section class="work-section">
           <img class="frame" src="/assets/lindsay.jpg" alt="Lindsay Peltier" />
           <p>Lindsay Peltier</br>"Raphael"</p>
-          <a href="https://github.com/lindsaypeltier"><img alt="GitHub" src=""></a>
-          <a href="https://www.linkedin.com/in/lindsaypeltier/"><img alt="LinkedIn" src=""></a>
+          <a href="https://github.com/lindsaypeltier"><img class="social-media" alt="GitHub"
+              src="assets/github.png"></a>
+          <a href="https://www.linkedin.com/in/lindsaypeltier/"><img class="social-media" alt="LinkedIn"
+              src="assets/linkedin.png"></a>
         </section>
       </li>
+
+      <li class="li-about">
+        <section class="work-section">
+          <img class="frame" src="/assets/travis.jpg" alt="Travis Skyles" />
+          <p>Travis Skyles<br />"Leonardo"</p>
+          <a href="https://github.com/tskyles"><img class="social-media" alt="GitHub" src="assets/github.png"></a>
+          <a href="https://www.linkedin.com/in/travisskyles/"><img class="social-media" alt="LinkedIn"
+              src="assets/linkedin.png"></a>
+        </section>
+      </li>
+
     </ul>
-    
+
     <%- include('../layouts/footer') %>
   </main>
 </body>
