--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -75,13 +75,11 @@ footer {
   color: black;
 }
 
-
-
 button {
   margin-top: 10px;
   padding: 10px;
   background-color: #d1ab90;
-  font-size: .8em;
+  font-size: 0.8em;
   font-family: 'Comfortaa', cursive;
   border-radius: 5px;
 }
@@ -108,4 +106,12 @@ h4 {
 
 .fas {
   color: #847577;
+}
+
+#pocket {
+  letter-spacking: 0.1em;
+}
+
+#gallery {
+  letter-spacing: 0.1em;
 }
