--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -10,7 +10,7 @@
   <%- include('../layouts/header') %>
   <main>
     <h4>Renaissance Devs</h4>
-  <div id="backgroundimage"></div>
+  <div class="backgroundimage">
     <ul class="ul-about">
       <li class="li-about">
         <section class="work-section">
