--- a/views/pages/galleries.ejs
+++ b/views/pages/galleries.ejs
@@ -15,7 +15,7 @@
       <h3>Create a new Gallery</h3>
       <label for="gallery">New Gallery Name</label>
       <input type="hidden" name="_method" value="PUT">
-      <input type="text" name="gallery" id="gallery">
+      <input type="text" name="gallery">
       <button type="submit">Create</button>
     </form>
 
@@ -23,7 +23,7 @@
       <h3>Delete a Gallery</h3>
       <br>
       <input type="hidden" name="_method" value="delete">
-      <select name="gallery" id="gallery">
+      <select name="gallery">
         <option value="all">Choose gallery</option>
         <% galleries.forEach(gallery => { %>
         <option value="<%= gallery.name %>"><%= gallery.name %></option>
