--- a/public/styles/layouts/desktop.css
+++ b/public/styles/layouts/desktop.css
@@ -13,3 +13,12 @@ li {
 .li-about {
   width: 25%;
 }
+
+/* BACKGROUND IMAGE ON ABOUT US PAGE */
+
+.backgroundimage {
+  background-image: url(../../assets/spotlights.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-image-width: 100%;
+}
