--- a/views/works/detail.ejs
+++ b/views/works/detail.ejs
@@ -22,7 +22,7 @@
         <input type="hidden" id="title" value="<%= work.title%>">
         <input type="hidden" id="artist" value="<%= work.artist%>">
         <input type="hidden" id="century" value="<%= work.century%>">
-        <select name="gallery" id="gallery" required>
+        <select name="gallery" required>
           <option selected>Choose gallery</option>
           <% galleries.forEach(gallery => { %>
           <option value="<%= gallery.name %>"><%= gallery.name %></option>
