--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-  <p><a href="https://github.com/Renaissance-devs">&copy 2019 Renaissance Devs<img id="footer-github" alt="GitHub" src="assets/githubwhite.png"></a></p>
+  <p><a href="https://github.com/Renaissance-devs">&copy 2019 Renaissance Devs</a></p>
   <a href="#top">back to top</a>
   
 </footer>
