--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -10,7 +10,7 @@
   <%- include('../layouts/header') %>
   <main>
   <div class="backgroundimage">
-    <h4>Renaissance Devs</h4>
+    <h4><p id="about-p">Renaissance Devs</p></h4>
     <ul class="ul-about">
       <li class="li-about">
         <section class="work-section">
