--- a/views/searches/new.ejs
+++ b/views/searches/new.ejs
@@ -14,7 +14,7 @@
       Search by Artist: <input type="radio" name="search" value="artist"> <br>
       Search by Title: <input type="radio" name="search" value="title"> <br>
       Search by Main Color: <input type="radio" name="search" value="color"> <br>
-      <button type="submit">Search for a Work</button>
+      <button type="submit">Search for Artwork</button>
     </form>
   </main>
   <%- include('../layouts/footer') %>
